examples/kju/positive/minimal/minimal_example_int_nonzero.kju
fun kju():Int{
  return 8;
}
