examples/kju/negative/structs/bad_identifier_int.kju
struct Int
{
}

fun kju() : Unit
{
}